# aoc2024

./: .justfile  Cargo.toml
aoc2024-01-1/: Cargo.toml
aoc2024-01-1/src/: lib.rs  main.rs
aoc2024-01-2/: Cargo.toml
aoc2024-01-2/src/: lib.rs  main.rs
aoc2024-02-1/: Cargo.toml
aoc2024-02-1/src/: lib.rs  main.rs
aoc2024-02-2/: Cargo.toml
aoc2024-02-2/src/: lib.rs  main.rs
aoc2024-03-1/: Cargo.toml
aoc2024-03-1/src/: lib.rs  main.rs
aoc2024-03-2/: Cargo.toml
aoc2024-03-2/src/: lib.rs  main.rs
aoc2024-04-1/: Cargo.toml
aoc2024-04-1/src/: lib.rs  main.rs
aoc2024-04-2/: Cargo.toml
aoc2024-04-2/src/: lib.rs  main.rs
aoc2024-05-1/: Cargo.toml
aoc2024-05-1/src/: lib.rs  main.rs
aoc2024-05-2/: Cargo.toml
aoc2024-05-2/src/: lib.rs  main.rs
aoc2024-06-1/: Cargo.toml
aoc2024-06-1/src/: lib.rs  main.rs
aoc2024-06-2/: Cargo.toml
aoc2024-06-2/src/: lib.rs  main.rs
aoc2024-07-1/: Cargo.toml
aoc2024-07-1/src/: lib.rs  main.rs
aoc2024-07-2/: Cargo.toml
aoc2024-07-2/src/: lib.rs  main.rs
aoc2024-08-1/: Cargo.toml
aoc2024-08-1/src/: lib.rs  main.rs
aoc2024-08-2/: Cargo.toml
aoc2024-08-2/src/: lib.rs  main.rs
aoc2024-09-1/: Cargo.toml
aoc2024-09-1/src/: lib.rs  main.rs
aoc2024-10-1/: Cargo.toml
aoc2024-10-1/src/: lib.rs  main.rs
aoc2024-10-2/: Cargo.toml
aoc2024-10-2/src/: lib.rs  main.rs
aoc2024-11-1/: Cargo.toml
aoc2024-11-1/src/: lib.rs  main.rs
aoc2024-11-2/: Cargo.toml
aoc2024-11-2/src/: lib.rs  main.rs
aoc2024-12-1/: Cargo.toml
aoc2024-12-1/src/: lib.rs  (+1 more)
aoc2024-12-2/: Cargo.toml
common/: Cargo.toml
(+3 files in other folders)
