[workspace]

members = ["aoc2024-*", "common"]

[workspace.dependencies]
color-eyre = "0.6.2"
elsa = "1.9.0"
indoc = "2.0.4"
itertools = "0.13.0"
nom = "7.1.3"
petgraph = "0.6.4"
rayon = "1.8.0"
regex = "1.10.2"
tracing-test = "0.2.4"
thiserror = "2.0.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
