[package]
name = "aoc2024-09-1"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
itertools.workspace = true
nom = { workspace = true }
thiserror.workspace = true
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
