[package]
name = "aoc2024-11-2"
version = "0.1.0"
edition = "2021"

[dependencies]
cache-macro = "0.4.1"
common = { path = "../common" }
ilog = "1.0.1"
lazy_static = "1.5.0"
lru-cache = "0.1.2"
nom = { workspace = true }
thiserror.workspace = true
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
